--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.2.2
+  postgres: ^2.5.5
+  logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
