--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,18 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.10.0-alpha01'
+        // Other dependencies
+    }
+}
+
+android {
+    ndkVersion = "27.0.12077973"
+}
+
 allprojects {
     repositories {
         google()
