--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,10 +5,14 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+apply plugin: 'com.android.application'
+
 android {
+    compileSdkVersion 33
+
     namespace = "com.example.dacn3"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = "27.0.12077973"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
