--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
   fl_chart: ^0.70.2
+  web3dart: ^2.7.3
+  http: ^1.2.2
+  flutter_dotenv: ^5.0.2
 
 
 dev_dependencies:
@@ -37,3 +40,4 @@ flutter:
   - assets/splash_imggg.png
   - assets/card.png
   - assets/avatar_app.png
+  - .env
