--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   google_fonts: ^6.2.1
   fl_chart: ^0.70.2
   web3dart: ^2.7.3
-  http: ^1.2.2
+  http: ^1.3.0
   flutter_dotenv: ^5.0.2
 
 
@@ -42,4 +42,4 @@ flutter:
   - assets/splash_imggg.png
   - assets/card.png
   - assets/avatar_app.png
-  - .env
+  - assets/AccountManager.json
