--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   mockito: ^5.4.2
   build_runner: ^2.4.6
+  test: ^1.24.0
 
 flutter:
   uses-material-design: true
@@ -42,3 +43,4 @@ flutter:
   - assets/card.png
   - assets/avatar_app.png
   - assets/AccountManager.json
+  - .env
