--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   web3dart: ^2.7.3
   http: ^1.3.0
   flutter_dotenv: ^5.0.2
+  crypt: ^4.2.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
