--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,13 @@ dependencies:
   flutter_svg: ^2.0.17
   google_fonts: ^6.2.1
   fl_chart: ^0.70.2
-  web3dart: ^2.7.3
+  web3dart: ^2.7.1
   http: ^1.3.0
-  flutter_dotenv: ^5.0.2
   crypt: ^4.2.0
   intl: ^0.20.2
+  walletconnect_dart: ^0.0.10
+  url_launcher: ^6.3.1
+  flutter_web3: ^2.1.9
 
 dev_dependencies:
   flutter_test:
